更新repository和service中